tests/modules/module_open_not_exported.m31
module A =
struct
  let x = "A.x"
end

module B =
struct
  open A
end ;;

B.x